--- a/src/main/java/cajero/LoginPantalla.form
+++ b/src/main/java/cajero/LoginPantalla.form
@@ -226,6 +226,9 @@
           <Events>
             <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jt_numTarjetaKeyTyped"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="jl_infoNumTarjeta">
           <Properties>
